# foillib

./: README.md  pyproject.toml
.github/workflows/: tests.yaml
docs/: docs.py
src/foillib/: __init__.py  _common.py  _naca4.py  _naca5.py  _naca_common.py  _types.py  bezier.py  naca.py
tests/: test_naca.py
